k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-app
  labels:
    app: dotnet-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dotnet-app
  template:
    metadata:
      labels:
        app: dotnet-app
    spec:
      containers:
      - name: dotnet-app
        # This image is a placeholder; CI/CD will update it.
        # Ensure you create the repository first or replace with a valid initial image
        image: us-central1-docker.pkg.dev/noble-maxim-404408/my-docker-repo/dotnet-app@sha256:6cbb799bc47494c7b1d41705563054ed5f3f299073b32b7d1047f6c37dd9f20d
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
