k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-app-service
spec:
  type: NodePort
  selector:
    app: dotnet-app
  ports:
  - port: 80
    targetPort: 8080
